--- a/cml/index.html
+++ b/cml/index.html
@@ -177,7 +177,7 @@
       </div>
     </section>
     <section class="third" style="width: 100%;border-radius: 0;background: white; ">
-      <div class="container sec">
+      <div class="container sec" style="margin-bottom: 0;">
         <div class="head">
           <h1 class="success">we <span>never</span> dreamed about success.<br>
             we worked @ for it</h1>
@@ -196,9 +196,10 @@
       </div>
       </div>
     </section>
+
+
     <footer>
-      <div class="container sec" style="flex-direction: column;    margin: 47px auto;
-">
+      <div class="container sec" style="flex-direction: column;margin: 47px auto;margin-bottom: 0;">
         <hr>
         <div class="box">
         <div class="logoico">
